fix: logo text not visible when zooming in

--- a/packages/ma-components/page-header/page-header.css
+++ b/packages/ma-components/page-header/page-header.css
@@ -42,7 +42,7 @@
   display: none;
 }
 
-@container ma-page-header (width <= 20rem) {
+@container ma-page-header (width < 20rem) {
   .ma-page-header__content {
     flex-direction: column;
   }
